; ModuleID = '/home/carl/AnghaBench/linux/net/ipv6/extr_seg6_local.c_input_action_end_dx6.c'
source_filename = "/home/carl/AnghaBench/linux/net/ipv6/extr_seg6_local.c_input_action_end_dx6.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sk_buff = type { i32 }
%struct.seg6_local_lwt = type { %struct.in6_addr }
%struct.in6_addr = type { i32 }

@IPPROTO_IPV6 = common dso_local global i32 0, align 4
@EINVAL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.sk_buff*, %struct.seg6_local_lwt*)* @input_action_end_dx6 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @input_action_end_dx6(%struct.sk_buff* %0, %struct.seg6_local_lwt* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.sk_buff*, align 8
  %5 = alloca %struct.seg6_local_lwt*, align 8
  %6 = alloca %struct.in6_addr*, align 8
  store %struct.sk_buff* %0, %struct.sk_buff** %4, align 8
  store %struct.seg6_local_lwt* %1, %struct.seg6_local_lwt** %5, align 8
  store %struct.in6_addr* null, %struct.in6_addr** %6, align 8
  %7 = load %struct.sk_buff*, %struct.sk_buff** %4, align 8
  %8 = load i32, i32* @IPPROTO_IPV6, align 4
  %9 = call i32 @decap_and_validate(%struct.sk_buff* %7, i32 %8)
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %12, label %11

11:                                               ; preds = %2
  br label %31

12:                                               ; preds = %2
  %13 = load %struct.sk_buff*, %struct.sk_buff** %4, align 8
  %14 = call i32 @pskb_may_pull(%struct.sk_buff* %13, i32 4)
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %17, label %16

16:                                               ; preds = %12
  br label %31

17:                                               ; preds = %12
  %18 = load %struct.seg6_local_lwt*, %struct.seg6_local_lwt** %5, align 8
  %19 = getelementptr inbounds %struct.seg6_local_lwt, %struct.seg6_local_lwt* %18, i32 0, i32 0
  %20 = call i32 @ipv6_addr_any(%struct.in6_addr* %19)
  %21 = icmp ne i32 %20, 0
  br i1 %21, label %25, label %22

22:                                               ; preds = %17
  %23 = load %struct.seg6_local_lwt*, %struct.seg6_local_lwt** %5, align 8
  %24 = getelementptr inbounds %struct.seg6_local_lwt, %struct.seg6_local_lwt* %23, i32 0, i32 0
  store %struct.in6_addr* %24, %struct.in6_addr** %6, align 8
  br label %25

25:                                               ; preds = %22, %17
  %26 = load %struct.sk_buff*, %struct.sk_buff** %4, align 8
  %27 = load %struct.in6_addr*, %struct.in6_addr** %6, align 8
  %28 = call i32 @seg6_lookup_nexthop(%struct.sk_buff* %26, %struct.in6_addr* %27, i32 0)
  %29 = load %struct.sk_buff*, %struct.sk_buff** %4, align 8
  %30 = call i32 @dst_input(%struct.sk_buff* %29)
  store i32 %30, i32* %3, align 4
  br label %36

31:                                               ; preds = %16, %11
  %32 = load %struct.sk_buff*, %struct.sk_buff** %4, align 8
  %33 = call i32 @kfree_skb(%struct.sk_buff* %32)
  %34 = load i32, i32* @EINVAL, align 4
  %35 = sub nsw i32 0, %34
  store i32 %35, i32* %3, align 4
  br label %36

36:                                               ; preds = %31, %25
  %37 = load i32, i32* %3, align 4
  ret i32 %37
}

declare dso_local i32 @decap_and_validate(%struct.sk_buff*, i32) #1

declare dso_local i32 @pskb_may_pull(%struct.sk_buff*, i32) #1

declare dso_local i32 @ipv6_addr_any(%struct.in6_addr*) #1

declare dso_local i32 @seg6_lookup_nexthop(%struct.sk_buff*, %struct.in6_addr*, i32) #1

declare dso_local i32 @dst_input(%struct.sk_buff*) #1

declare dso_local i32 @kfree_skb(%struct.sk_buff*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
